# Voxa

./: .gitignore  VoxaAppInfo.plist
AudioDriver/: CMakeLists.txt  README.md  build.sh  install.sh
AudioDriver/Common/: VoxaMicRing.h
AudioDriver/VoxaMicDevice/: CMakeLists.txt  Driver.cpp
Config/: VoxaApp.xcconfig  VoxaSecrets.local.xcconfig.example
Scripts/: generate_mac_app_icons.py
Voxa/: AppNotifications.swift  AudioProcessManager.swift  AudioVisualizationView.swift  CallAudioRecorder.swift  CallNotificationEvents.swift  CallViewModel.swift  ContentView.swift  Voxa.entitlements  VoxaApp.swift  VoxaAuriginChunkWAV.swift
Voxa.xcodeproj/: project.pbxproj
Voxa.xcodeproj/xcshareddata/xcschemes/: Voxa.xcscheme
Voxa/Assets.xcassets/facetime1.imageset/: Contents.json
Voxa/Assets.xcassets/facetime2.imageset/: Contents.json
Voxa/Assets.xcassets/phone1.imageset/: Contents.json
Voxa/Core/: SpeechRecognitionLocaleCatalog.swift  TranscriptTurnMatch.swift
Voxa/Core/Accessibility/: AccessibilityPermission.swift  FaceTimeAccessibilityAX.swift  FaceTimeDTMFAccessibility.swift  FaceTimeSettingsInspector.swift
Voxa/Core/Audio/: AVAudioPCMBuffer+VoxaCopy.swift  AudioProcessManager.swift  BubbleSegmentAudioBuffer.swift  CallAudioLevels.swift  FluidAudioBubbleDiarizer.swift  FluidAudioBubbleTranscriber.swift  VoiceToTextManager.swift  (+21 more)
Voxa/Networking/: GoogleTranslateConfiguration.swift  GoogleTranslateDTOs.swift  GoogleTranslateRestClient.swift  OpenAIChatDTOs.swift  OpenAIConfiguration.swift  OpenAIRestClient.swift
Voxa/ViewModels/: CallAudioRecorder.swift  CallViewModel.swift  CaptionTranslationViewModel.swift  ConversationViewModel.swift
Voxa/Views/: CallGoalActionHardcodedTestButton.swift  CallGoalActionsView.swift  ContentView.swift  ConversationTranscriptView.swift  ConversationTurnBubbleView.swift  SpeakerColoredTranscriptText.swift  SpeakerDiarizationTimelineView.swift
VoxaSDK/: AUAudioError.swift  AUAudioProcess.swift  AUAudioTapManager.swift  AUAudioUtils.swift  AUProcessTap.swift  AudioRecordingPermission.swift  DetectionScope.swift  VoxaAudioKit.swift  VoxaSystemAudio.swift
VoxaSDK/Audio/: AVAudioPCMBuffer+VoxaCopy.swift  ScanScope.swift  VOAudioProcess.swift  VOAudioTapManager.swift  VOAudioUtils.swift  VOProcessTap.swift  ZoomCallDetectionExclusion.swift
VoxaSDK/Error/: VOAudioError.swift
libASPL/: CMakeLists.txt  VENDORED.md
(+29 files in other folders)
