cmake_minimum_required(VERSION 3.12.0)

project(VoxaMic CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

set(CODESIGN_ID "" CACHE STRING "Codesign ID")

set(DRIVER_NAME "VoxaMic")
set(DRIVER_VERSION "1.0.0")
set(DRIVER_COPYRIGHT "Copyright (c) Aurigin")
set(DRIVER_IDENTIFIER "com.aurigin.test.VoxaMic")
set(DRIVER_UID "A7C4E2F1-9B3D-4E8A-B2C1-0D5F6A8E9C3B")
set(DRIVER_ENTRYPOINT "VoxaMicEntryPoint")

message(STATUS "VoxaMic driver name - ${DRIVER_NAME}")
message(STATUS "VoxaMic codesign ID - ${CODESIGN_ID}")

get_filename_component(LIBASPL_SOURCE_DIR
  ${CMAKE_CURRENT_LIST_DIR}/../../../libASPL
  ABSOLUTE)

set(LIBASPL_TARGET VoxaMic_libASPL)
include(ExternalProject)
ExternalProject_Add(${LIBASPL_TARGET}
  SOURCE_DIR ${LIBASPL_SOURCE_DIR}
  BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/libASPL-build
  INSTALL_DIR ${CMAKE_CURRENT_BINARY_DIR}/libASPL-prefix
  CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR>
  LOG_DOWNLOAD YES
  LOG_CONFIGURE YES
  LOG_BUILD YES
  LOG_INSTALL YES
)

add_library(${DRIVER_NAME} MODULE
  "Driver.cpp"
)

add_dependencies(${DRIVER_NAME} ${LIBASPL_TARGET})
target_include_directories(${DRIVER_NAME}
  PRIVATE
    ${CMAKE_CURRENT_BINARY_DIR}/libASPL-prefix/include
    ${CMAKE_CURRENT_LIST_DIR}/..
)
target_link_libraries(${DRIVER_NAME}
  PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/libASPL-prefix/lib/libASPL.a
)

find_library(LIB_CoreFoundation CoreFoundation REQUIRED)
target_link_libraries(${DRIVER_NAME} PRIVATE ${LIB_CoreFoundation})

set_target_properties(${DRIVER_NAME} PROPERTIES
  OUTPUT_NAME "${DRIVER_NAME}"
  BUNDLE true
  BUNDLE_EXTENSION "driver"
  PREFIX ""
  SUFFIX ""
  MACOSX_BUNDLE ON
  MACOSX_BUNDLE_INFO_PLIST "${CMAKE_CURRENT_SOURCE_DIR}/Info.plist.in"
  MACOSX_BUNDLE_BUNDLE_NAME "${DRIVER_NAME}"
  MACOSX_BUNDLE_BUNDLE_VERSION "${DRIVER_VERSION}"
  MACOSX_BUNDLE_COPYRIGHT "${DRIVER_COPYRIGHT}"
  MACOSX_BUNDLE_GUI_IDENTIFIER "${DRIVER_IDENTIFIER}"
  MACOSX_BUNDLE_SHORT_VERSION_STRING "${DRIVER_VERSION}"
)

if(NOT CODESIGN_ID STREQUAL "")
  add_custom_command(
    TARGET ${DRIVER_NAME}
    POST_BUILD
    COMMENT "Signing ${DRIVER_NAME}.driver"
    VERBATIM
    COMMAND codesign --force -s "${CODESIGN_ID}"
      "${CMAKE_CURRENT_BINARY_DIR}/${DRIVER_NAME}.driver"
  )
endif()
